[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tileset.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullet.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 76, 140, 4, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 2 )

[node name="SmallBullet" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 2
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Tail" type="Node2D" parent="."]

[node name="Sprite2" type="Sprite" parent="Tail"]
modulate = Color( 1, 1, 1, 0.25098 )
position = Vector2( -2, 0 )
texture = SubResource( 1 )

[node name="Sprite3" type="Sprite" parent="Tail"]
modulate = Color( 1, 1, 1, 0.12549 )
position = Vector2( -4, 0 )
texture = SubResource( 1 )

[node name="ExpiryTimer" type="Timer" parent="."]
